# basecfd

./: .astylerc  .gitignore  CMakeLists.txt  README.md  package.cmake.in
include/basecfd/: adjacency_list.hpp  adjoiner.hpp  algorithm.hpp  cell.hpp  cell_info.hpp  cell_iterator.hpp  definitions.hpp  element.hpp  filtered_iterator.hpp  format.hpp  grid.hpp  grid_info.hpp  partitioner.hpp  plugin.hpp  range.hpp  unstructured_grid.hpp  vector.hpp
plugins/: CMakeLists.txt
plugins/metis/: CMakeLists.txt  MetisConfig.cmake
plugins/metis/adjoiner/: CMakeLists.txt  metis_adjoiner.cpp
plugins/metis/partitioner/: CMakeLists.txt  metis_partitioner.cpp
plugins/vtk_legacy/: CMakeLists.txt  vtk_legacy.cpp
src/: adjoiner.cpp  basecfd.cpp  format.cpp  grid.cpp  partitioner.cpp  plugin.cpp  unstructured_grid.cpp
test/units/: tests_runner.cpp
